--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -24,37 +24,32 @@
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-shell": "~0.6.1",
-    "grunt-contrib-compass": "~0.6.0",
+    "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-modernizr": "~0.4.1",
-    "lodash": "~2.4.0",
-    "grunt-lodash": "~0.3.0",
     "grunt-contrib-csslint": "~0.2.0",
-    "grunt-svgmin": "~0.3.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "coffeelint": "~1.0.2",
-    "jade": "~0.35.0",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-sails-linker": "~0.9.5",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-modernizr": "~0.4.1",
+    "grunt-shell": "~0.6.1",
+    "grunt-lodash": "~0.3.0",
+    "grunt-svgmin": "~0.3.0",
     "grunt-gh-pages": "~0.9.0",
     "grunt-concurrent": "~0.4.2",
     "grunt-open": "~0.2.2",
-    "grunt-casperjs": "~1.4.0",
-    "grunt-csscss": "~0.6.1",
     "grunt-contrib-imagemin": "~0.4.0",
     "grunt-prompt": "~0.1.2",
     "grunt-bower-task": "~0.3.4",
+    "grunt-rsync": "~0.2.1",
+    "lodash": "~2.4.1",
+    "coffeelint": "~1.0.2",
+    "jade": "~1.0.0",
     "load-grunt-tasks": "~0.2.0",
-    "grunt-autoprefixer": "~0.4.1",
-    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-autoprefixer": "~0.5.0",
     "ini": "~1.1.0",
     "assemble-front-matter": "~0.1.2",
-    "image-size": "0.1.15",
-    "css-parse": "~1.5.3",
-    "grunt-combine-media-queries": "~1.0.8",
-    "grunt-rsync": "~0.2.1"
+    "image-size": "~0.1.16"
   }
 }
