--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-coffee": "~0.8.0",
     "grunt-contrib-concat": "~0.3.0",
@@ -39,7 +39,7 @@
     "grunt-gh-pages": "~0.9.0",
     "grunt-concurrent": "~0.4.2",
     "grunt-open": "~0.2.2",
-    "grunt-contrib-imagemin": "~0.4.0",
+    "grunt-contrib-imagemin": "~0.5.0",
     "grunt-prompt": "~0.1.2",
     "grunt-bower-task": "~0.3.4",
     "grunt-rsync": "~0.2.1",
@@ -50,6 +50,7 @@
     "grunt-autoprefixer": "~0.6.3",
     "ini": "~1.1.0",
     "assemble-front-matter": "~0.1.2",
-    "image-size": "~0.1.16"
+    "image-size": "~0.2.1",
+    "uglify-save-license": "~0.2.2"
   }
 }
