--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -25,14 +25,14 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-compass": "~0.7.0",
-    "grunt-contrib-coffee": "~0.8.0",
+    "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-csslint": "~0.2.0",
-    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-connect": "^0.7.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-modernizr": "~0.4.1",
+    "grunt-contrib-cssmin": "^0.8.0",
+    "grunt-modernizr": "^0.5.1",
     "grunt-shell": "~0.6.1",
     "grunt-lodash": "~0.3.0",
     "grunt-svgmin": "~0.3.0",
@@ -40,14 +40,14 @@
     "grunt-concurrent": "~0.4.2",
     "grunt-open": "~0.2.2",
     "grunt-contrib-imagemin": "~0.5.0",
-    "grunt-prompt": "~0.1.2",
+    "grunt-prompt": "^1.0.0",
     "grunt-bower-task": "~0.3.4",
-    "grunt-rsync": "~0.2.1",
+    "grunt-rsync": "^0.3.0",
     "lodash": "~2.4.1",
-    "coffeelint": "~1.0.2",
-    "jade": "~1.1.0",
-    "load-grunt-tasks": "~0.2.0",
-    "grunt-autoprefixer": "~0.6.3",
+    "coffeelint": "^1.1.0",
+    "jade": "^1.2.0",
+    "load-grunt-tasks": "^0.4.0",
+    "grunt-autoprefixer": "^0.7.2",
     "ini": "~1.1.0",
     "assemble-front-matter": "~0.1.2",
     "image-size": "~0.2.1",
